--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack/react-table": "^8.21.2",
+    "antd": "^5.24.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.13",
     "lucide-react": "^0.476.0",
+    "moment": "^2.30.1",
     "next": "15.2.0",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
